tdf#135406 - Border properties not properly listed in the Styles Inspector

Several Border properties are stored as STRUCT internally.
Added support to show them in the Inspector.

Change-Id: Ida1014691ab2245eea04487ce753c23bdf0bddb9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/100288
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins